Fix too much padding on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-* {
+ * {
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -11,7 +11,6 @@ html, body {
 
 main {
   margin: auto;
-  width: 50%;
   padding: 20px;
 }
 
@@ -30,4 +29,4 @@ main > h1 {
 footer{
   text-align: right;
   font-size: 0.75em;
-}
+} 
